--- a/learning_logs/templates/learning_logs/index.html
+++ b/learning_logs/templates/learning_logs/index.html
@@ -1,12 +1,7 @@
-<html>
-<head>
-<title>Learning Logs</title>
-</head>
+{% extends "learning_logs/base.html" %}
 
-<body>
-<h1>Learning Log</h1>
+{% block content %}
 
 <p>Learning Log helps you keep track of your learning, for any topic you're learning about.</p>
 
-<body>
-</html>
+{% endblock content %}
