--- a/learning_logs/templates/learning_logs/base.html
+++ b/learning_logs/templates/learning_logs/base.html
@@ -4,7 +4,8 @@
 </head>
 
 <body>
-<a href="{% url 'learning_logs:index' %}"><h1>Learning Log</h1></a>
+<a href="{% url 'learning_logs:index' %}">Learning Log</a> | 
+<a href="{% url 'learning_logs:topics' %}">Topics</a>
 
 {% block content %}{% endblock content %}
 
