--- a/learning_logs/templates/learning_logs/topic.html
+++ b/learning_logs/templates/learning_logs/topic.html
@@ -6,6 +6,10 @@
 
 <h3>Entries</h3>
 
+<p>
+	<a href="{% url 'learning_logs:new_entry' topic.id %}">Add new entry</a>
+</p>
+
 <ul>
 	{% for entry in entries %}
 		<li>
