--- a/learning_logs/templates/learning_logs/base.html
+++ b/learning_logs/templates/learning_logs/base.html
@@ -5,7 +5,12 @@
 
 <body>
 <a href="{% url 'learning_logs:index' %}">Learning Log</a> | 
-<a href="{% url 'learning_logs:topics' %}">Topics</a>
+<a href="{% url 'learning_logs:topics' %}">Topics</a> |
+{% if user.is_authenticated %}
+	Hello, {{ user.username }}.
+{% else %}
+	<a href="{% url 'users:login' %}">Log in</a>
+{% endif %}
 
 {% block content %}{% endblock content %}
 
