Connecting data to certain users

--- a/users/templates/registration/logged_out.html
+++ b/users/templates/registration/logged_out.html
@@ -2,6 +2,6 @@
 
 {% block content %}
 
-<p> You have been logged out.  THank you for visiting</p>
+<p> You have been logged out.  Thank you for visiting!</p>
 	
 {% endblock content %}
