--- a/learning_logs/templates/learning_logs/new_topic.html
+++ b/learning_logs/templates/learning_logs/new_topic.html
@@ -1,13 +1,19 @@
 {% extends "learning_logs/base.html" %}
+{% load bootstrap4 %}
+
+{% block page_header %}
+	<h2>Add a New Topic</h2>
+{% endblock page_header %}
 
 {% block content %}
 
-<h2>Add a new topic:</h2>
-
-<form action="{% url 'learning_logs:new_topic' %}" method='post'>
-	{% csrf_token %}
-	{{ form.as_p }}
-	<button name="submit">Add topic</button>
-</form>
+	<form action="{% url 'learning_logs:new_topic' %}" method='post'>
+		{% csrf_token %}
+		{% bootstrap_form form %}
+		
+		{% buttons %}
+		<button name="submit" class="btn btn-secondary">Add Topic</button>
+		{% endbuttons %}
+	</form>
 
 {% endblock content %}
